# menu

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
beverages/: admin.py  models.py  urls.py  views.py
beverages/migrations/: 0001_initial.py  0002_alter_beverage_image_link.py  0003_alter_beveragetype_options.py  0004_alter_beveragetype_options.py  0005_alter_beveragetype_options.py  0006_alter_beverage_options_alter_beveragetype_options_and_more.py  0007_rename_image_link_beverage_post_link_beverage_image.py  0008_alter_beverage_image.py  0009_ingredients_alter_beverage_image_recipe.py  0010_remove_recipe_beverage_remove_recipe_ingredient_and_more.py
beverages/templates/beverages/: beverage_detail.html  beverage_list.html  beveragetype_detail.html  beveragetype_list.html  category_form.html  test.html
menu/: settings.py  urls.py
scripts/: start_server.sh
static_root/lib/easing/: easing.min.js
templates/: base.html  contact.html  index.html
