[tool.poetry]
name = "menu"
version = "0.1.0"
description = "Bar menu"
authors = ["FilipeBarnabe <filipebarnabe99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
django-bootstrap3 = "^23.4"
pillow = "^10.0.0"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"
psycopg2 = "^2.9.7"
django-json-widget = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
